Do not reset filename after encrypt/decrypt operation in editor

BUG:168703

svn path=/branches/KDE/4.0/kdeutils/kgpg/; revision=861760